--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/actiivty_duijiequeren.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/actiivty_duijiequeren.xml
@@ -39,6 +39,13 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_line"
         />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <LinearLayout
         android:padding="20dp"
@@ -60,59 +67,226 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:padding="10dp"
             android:text="客户："
             android:textColor="@color/chunhei"
-            android:textSize="15sp"
+            android:textSize="13sp"
             />
         <EditText
             android:id="@+id/customers_edittext_kehu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:background="@drawable/shape_case"
-            android:digits="0123456789X"
             android:hint=""
             android:inputType="number"
             android:maxLength="18"
             android:padding="10dp"
-            android:textSize="15sp"
+            android:textSize="13sp"
             />
     </LinearLayout>
 
     <!--联系电话-->
+        <LinearLayout
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingBottom="20dp"
         android:weightSum="10"
         >
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:padding="10dp"
             android:text="联系电话："
             android:textColor="@color/chunhei"
-            android:textSize="15sp"
+            android:textSize="13sp"
             />
         <EditText
             android:id="@+id/customers_edittext_tel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_weight="0.7"
             android:background="@drawable/shape_case"
-            android:digits="0123456789X"
+            android:digits="0123456789"
             android:hint=""
             android:inputType="number"
-            android:maxLength="18"
-            android:padding="10dp"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="13sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
+            android:textSize="15sp"
+            />
+        <EditText
+            android:id="@+id/customers_edittext_tel10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:background="@drawable/shape_case"
+            android:digits="0123456789"
+            android:hint=""
+            android:inputType="number"
+            android:maxLength="1"
+            android:padding="8dp"
             android:textSize="15sp"
             />
     </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_yincang"
+                android:layout_marginLeft="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="13sp"
+                    android:textColor="@color/text"
+                    android:text="只需要输入手机号前三位后四位"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:gravity="right"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:src="@drawable/eye_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:textSize="13sp"
+                        android:text="隐号报备"
+                        android:textColor="@color/juse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
+    </LinearLayout>
+
+
 
 
     <!--到访人数-->
@@ -128,17 +302,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:padding="10dp"
             android:text="到访人数："
             android:textColor="@color/chunhei"
-            android:textSize="15sp"
+            android:textSize="13sp"
             />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:background="@drawable/shape_case"
             android:gravity="center"
             android:padding="10dp"
@@ -171,18 +345,18 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:padding="10dp"
                 android:text="置业顾问："
                 android:textColor="@color/chunhei"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="7"
+                android:layout_weight="8"
                 android:background="@drawable/shape_case"
                 android:gravity="center"
                 android:weightSum="10"
@@ -198,15 +372,56 @@
                     android:hint=""
                     android:maxLength="30"
                     android:padding="10dp"
-                    android:textSize="15sp"
+                    android:textSize="13sp"
                     />
             </LinearLayout>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="13sp"
+                android:textColor="@color/chunhei"
+                android:text="到访确认照片:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/daofangzhaopian"
+                android:src="@drawable/default_3"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:paddingBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="13sp"
+                android:textColor="@color/chunhei"
+                android:text="确认单照片:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/querenzhaopian"
+                android:src="@drawable/default_3"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
         <ImageView
             android:src="@drawable/ic_line"
             android:layout_width="match_parent"
             android:layout_height="3dp" />
+
         <EditText
             android:id="@+id/et_comment"
             android:gravity="top"
@@ -235,6 +450,8 @@
 
 
     </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
