--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_housexinxi.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_housexinxi.xml
@@ -80,6 +80,7 @@
             android:textSize="18sp"
             />
         <TextView
+            android:id="@+id/tv_house_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1231244123"
