--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_genjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_genjin.xml
@@ -5,6 +5,11 @@
     android:background="@color/chunbai"
     android:padding="10dp"
     android:orientation="vertical">
+    <LinearLayout
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:text="最新房源动态"
         android:paddingBottom="10dp"
@@ -206,6 +211,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+    </LinearLayout>
 
     <ImageView
         android:background="@drawable/ic_line"
