--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_houseinfo.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_houseinfo.xml
@@ -45,6 +45,7 @@
         </LinearLayout>
     </RelativeLayout>
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -170,6 +171,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/tv_maidian"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="套二，住家装修，高楼层，对中庭"
@@ -184,6 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/tv_zhuangxiu"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="套二，住家装修，高楼层，对中庭"
@@ -191,6 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:text="户型介绍"
@@ -198,6 +202,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="套二，住家装修，高楼层，对中庭"
@@ -213,6 +218,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_line"/>
     <LinearLayout
+        android:visibility="gone"
         android:background="@color/chunbai"
 
         android:orientation="vertical"
