--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
@@ -418,7 +418,7 @@
         android:background="@drawable/ic_line"
         />
             <LinearLayout
-                android:visibility="visible"
+                android:visibility="gone"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -466,7 +466,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_recommended"
+                        android:src="@drawable/reported"
                         />
                     <LinearLayout
                         android:layout_gravity="center_vertical"
@@ -554,7 +554,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_recommended"
+                        android:src="@drawable/investigate"
                         />
                     <LinearLayout
                         android:layout_gravity="center_vertical"
@@ -642,7 +642,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_recommended"
+                        android:src="@drawable/maintenance"
                         />
                     <LinearLayout
                         android:layout_gravity="center_vertical"
@@ -730,7 +730,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_recommended"
+                        android:src="@drawable/contract"
                         />
                     <LinearLayout
                         android:layout_gravity="center_vertical"
@@ -818,7 +818,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_recommended"
+                        android:src="@drawable/signing"
                         />
                     <LinearLayout
                         android:layout_gravity="center_vertical"
